--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Titulo -->
-    <title>Mixteco</title>
+    <title>Mixteco con Ene</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./imagenes/ícono.png" />
     <!-- Bootstrap -->
